--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel = "stylesheet">
+    <style>
+        * {
+            font-family: "Rubik", "sans-serif";
+        }
+
+        div {
+            text-align: center;
+            margin-top: 50px;
+        }
+        h1 {
+            color : navy;
+            font-size: 40pt;
+        }
+        p {
+            font-size: 24pt;
+        }
+
+    </style>
 </head>
 <body>
     <div>
